Fixup anchor links to jump around the page

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,14 @@ ul, li {
 .clearfix:after {
   clear: both;
 }
+
+.App {
+  padding-top: 70px;
+}
+
+.OffsetPageAnchor {
+  position: relative;
+  top: -70px;
+  display: block;
+  visibility: hidden;
+};
